fix: code snippet text-align left on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -557,6 +557,11 @@ navbar {
     margin: 0 auto;
   }
   
+  .code-body,
+  .terminal-body {
+    text-align: left;
+  }
+  
   .hero-text p {
     max-width: 100%;
     margin-left: auto;
